--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,15 +1,48 @@
 .btn {
-  width: 192px;
-  height: 54px;
+  position: relative;
+  @include linkAsBlock;
+  width: 192px; //height: 54px;
   box-shadow: -4px 12px 40px rgba(0, 1, 1, 0.47);
   background-color: $light;
   border-radius: 30px;
-  >span {
-    color: #242424;
-    font-family: Lato;
-    font-size: 2.1rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.32px;
+  padding: 18px 32px;
+  color: $darken !important;
+  font-family: Lato;
+  font-size: 2.1rem;
+  font-weight: 700 !important;
+  text-transform: uppercase;
+  letter-spacing: 0.32px;
+  transition: background-color 0.3s;
+  &:before {
+    content: attr(data-text);
+    color: $light;
+    position: absolute;
+    display: block;
+    width: 99%;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%) scale(1.3);
+    opacity: 0;
+    text-align: center;
+    transition: transform 0.3s, opacity 0.3s;
+  }
+  &:hover {
+    color: transparent;
+    background-color: $dark;
+    &:before {
+      transform: translate(0, -50%) scale(1.0);
+      opacity: 1;
+    }
+  }
+  &--warn {
+    color: $light !important;
+    background-color: $warn;
+    &:hover {
+      color: transparent;
+      background-color: $light;
+      &:before {
+        color: $warn;
+      }
+    }
   }
 }
