--- a/src/scss/static/_reset.scss
+++ b/src/scss/static/_reset.scss
@@ -4,6 +4,8 @@
   border: 0;
   box-sizing: border-box;
   -webkit-text-size-adjust: 100%;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 html,body {
