updated intro, section1, section2, footer

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,7 +1,8 @@
 .btn {
   position: relative;
   @include linkAsBlock;
-  width: 192px; //height: 54px;
+  width: 192px;
+  height: auto;
   box-shadow: -4px 12px 40px rgba(0, 1, 1, 0.47);
   background-color: $light;
   border-radius: 30px;
