--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,12 +6,16 @@
 @import 'header';
 @import 'menu';
 
+@import 'intro';
+
 @import 'button';
 
 @import 'sections';
+@import 'section1';
+@import 'section2';
 @import 'section6';
 
-@import 'contact';
+@import 'box';
 
 @import 'static/globals';
 @import 'static/rwd';
