--- a/src/scss/static/_vars.scss
+++ b/src/scss/static/_vars.scss
@@ -1,5 +1,8 @@
 /*colors*/
 $light: #fff;
+$light2: #f5f5f5;
 $dark: #000;
 $darken: #242424;
+$darken2: #171717;
+$darkenLight: #6a6a6a;
 $warn: #bc2e3a;
