--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,7 +5,8 @@ header {
   background-color: red;
   z-index: 666;
   .wrapper {
-    max-width: 1200px;
+    max-width: 1600px;
+    padding: 0 60px;
     .content {
       display: flex;
       justify-content: space-between;
