--- a/src/scss/_section6.scss
+++ b/src/scss/_section6.scss
@@ -1,3 +1,20 @@
-.category6__header {
-  text-align: center;
+.section--footer {
+  @include bgImg;
+  background-image: url('../../img/footerbg.png');
+  &:before {
+    @include pseudoAbsolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($dark, 0.9);
+  }
+}
+
+.content.category6 {
+  color: $light;
+  h1 {
+    text-align: center;
+    color: $darkenLight;
+  }
 }
